// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PagePlanName opens using an existing plan 1`] = `
<form
  className="form-horizontal"
>
  <div
    className="required form-group has-feedback"
  >
    <label
      className="col-sm-3 control-label"
      htmlFor="formPlanName"
    >
      Name
    </label>
    <div
      className="col-sm-9"
    >
      <input
        className="form-control"
        id="formPlanName"
        onChange={[Function]}
        type="text"
        value="plan name"
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      className="col-sm-3 control-label"
      htmlFor="formPlanDescription"
    >
      Description
    </label>
    <div
      className="col-sm-9"
    >
      <input
        className="form-control"
        id="formPlanDescription"
        onChange={[Function]}
        type="text"
        value="description"
      />
    </div>
  </div>
</form>
`;

exports[`PagePlanName opens with an empty plan 1`] = `
<form
  className="form-horizontal"
>
  <div
    className="required form-group has-feedback"
  >
    <label
      className="col-sm-3 control-label"
      htmlFor="formPlanName"
    >
      Name
    </label>
    <div
      className="col-sm-9"
    >
      <input
        className="form-control"
        id="formPlanName"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      className="col-sm-3 control-label"
      htmlFor="formPlanDescription"
    >
      Description
    </label>
    <div
      className="col-sm-9"
    >
      <input
        className="form-control"
        id="formPlanDescription"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
  </div>
</form>
`;
